# was-playing

./: .gitignore  Cargo.toml  example.json
src/: authorization.rs  main.rs  songlogger.rs
