[package]
name = "was-playing"
version = "0.1.0"
authors = ["Esa Varemo <git@esav.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
oauth2 = "4.1"
reqwest = "0.11.6"
serde = "1.0.130"
serde_json = "1.0"
